<resources>
    <string name="app_name">FocalPoint</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="log_in_button">Log In</string>
    <string name="forgot_pass_text">Forgot password</string>
    <string name="create_account_text">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="school">School</string>
    <string name="question_6">#6</string>
    <string name="questionNumber5">#5</string>
    <string name="timerForEachQuestion">30</string>
    <string name="question5Content">The real origins of the War of ___________ were in the conflict that raged in Europe for two decades after Napoleon Bonaparte</string>
    <string name="submitAnswer">Submit</string>
    <string name="questionA">A</string>
    <string name="questionB">B</string>
    <string name="questionC">C</string>
    <string name="questionD">D</string>
    <string name="questionNumber4">#4</string>
    <string name="question4Content">What is the largest public companies in Canada by profit?\n</string>
    <string name="question4ABCD">A) Royal Bank Of Canada\n\nB)Bank of Nova Scotia\n\nC)Toronto-Dominion Bank\n\nD)Bank of Monteral</string>
    <string name="courses">Courses</string>
    <string name="enterCourseName">Enter The Course ID</string>
    <string name="addNewCourses">Add Courses</string>
    <string name="question_6_content">This sentence contains every letter in the alphabet.</string>
    <string name="results">Results</string>
</resources>
