<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.focalpoint.HoldingMultipleChoice">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionNumber4"
            android:id="@+id/questionNumber4"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/question_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timerForEachQuestion"
            android:id="@+id/QuestionTimeViewCount"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/question_size"
            android:textAlignment="gravity"
            android:gravity="right"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question4Content"
        android:paddingTop="50dp"
        android:id="@+id/questionID4"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/QuestionSizes" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionA"
            android:id="@+id/questionAButton"
            android:layout_weight="1"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionB"
            android:id="@+id/questionBButton"
            android:layout_weight="1"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionC"
            android:id="@+id/questionCButton"
            android:layout_weight="1"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionD"
            android:id="@+id/questionDButton"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question4ABCD"
        android:id="@+id/textView3"
        android:paddingTop="50dp"
        android:layout_below="@+id/questionID4"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/QuestionSizes" />

</RelativeLayout>
